Revision history for exact::class

{{$NEXT}}

1.01      2019-08-08 06:45:34-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.