@@ -1,6 +1,7 @@
 Revision history for exact::class
 
 {{$NEXT}}
+        - Switch from TryCatch to Try::Tiny as provided by exact
 
 1.01      2019-08-08 06:45:34-07:00 America/Los_Angeles
         - First version, released on an unsuspecting world.
